--- a/client/stylesheets/globals/various.import.less
+++ b/client/stylesheets/globals/various.import.less
@@ -1179,7 +1179,7 @@ label.error:before {
 }
 .toast-success {
   background: #fff;
-  border-left: 6px solid #62cb31;
+  border-left: 6px solid #01508C;
 }
 .toast-warning {
   background: #fff;
@@ -1198,7 +1198,7 @@ label.error:before {
   background-color: #3498db;
 }
 .toast-success .toast-progress {
-  background-color: #62cb31;
+  background-color: #01508C;
 }
 .toast-warning .toast-progress {
   background-color: #ffb606;
