--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -2,18 +2,19 @@
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 
 // Color list
-@color-navy-blue:#34495e;
-@color-violet:#9b59b6;
-@color-blue:#3498db;
-@color-green:#62cb31;
+@color-navy-blue:#01508C;
+@color-violet:#01508C;
+@color-blue:#01508C;
+@color-green:#01508C;
 @color-yellow:#ffb606;
 @color-orange:#e67e22;
 @color-red:#e74c3c;
 @color-red-deep:#c0392b;
+@color-blue-euro:#F0F0F5;
 
 // Additional colors
 @color-text: #6a6c6f;
-@color-bright: #f7f9fa;
+@color-bright: #F0F0F5;
 @color-background: #f1f3f6;
 @color-background-boxed: lighten(@color-background, 3%);
 @border-color: #e4e5e7;
