--- a/client/templates/views/appviews/emailView.html
+++ b/client/templates/views/appviews/emailView.html
@@ -11,7 +11,7 @@
                     <div class="hpanel">
                         <div class="panel-body">
 
-                            <a href="mailbox_compose.html" class="btn btn-success btn-block m-b-md">Compose</a>
+                            <a href="{{pathFor route='emailCompose'}}" class="btn btn-success btn-block m-b-md">Compose</a>
 
                             <ul class="mailbox-list">
                                 <li>
