--- a/client/templates/views/landing/landing-page.html
+++ b/client/templates/views/landing/landing-page.html
@@ -9,20 +9,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="{{pathFor route='dashboard'}}" class="navbar-brand">HOMER</a>
+                <a href="{{pathFor route='login'}}" class="navbar-brand">LOGI SISSE</a>
                 <div class="brand-desc">
-                    Landing page for Homer app
+                    <b><u>Ekslusiivne</u></b> Euro 2016 ennustusmäng
                 </div>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a class="page-scroll" href="#page-top">Home</a></li>
-                    <li><a class="page-scroll" page-scroll href="#components">UI</a></li>
-                    <li><a class="page-scroll" page-scroll href="#features">Features</a></li>
-                    <li><a class="page-scroll" page-scroll href="#team">Team</a></li>
-                    <li><a class="page-scroll" page-scroll href="#pricing">Pricing </a></li>
-                    <li><a class="page-scroll" page-scroll href="#clients">Clients </a></li>
-                    <li><a class="page-scroll" page-scroll href="#contact">Contact</a></li>
+                    <li class="active"><a class="page-scroll" href="#page-top">Avaleht</a></li>
+                    <!--li><a class="page-scroll" page-scroll href="#components">UI</a></li-->
+                    <li><a class="page-scroll" page-scroll href="#features">Teenused</a></li>
+                    <li><a class="page-scroll" page-scroll href="#rules">Reeglid</a></li>
+					<li><a class="page-scroll" page-scroll href="#pricing">Hinnad</a></li>
+					<!--li><a class="page-scroll" page-scroll href="#clients">Clients </a></li-->
+                    <!--li><a class="page-scroll" page-scroll href="#team">Meeskond</a></li-->
+					<li><a class="page-scroll" page-scroll href="#contact">Liitu meiega</a></li>
                 </ul>
             </div>
         </div>
@@ -31,7 +32,7 @@
         <div class="container">
             <div class="heading">
                 <h1>
-                    Welcome to Homer landing page
+                    Tere tulemast EURO 2016 ennustuslehele! 
                 </h1>
                 <span>Contrary to popular belief, Lorem Ipsum is not<br/> simply random text for print.</span>
                 <p class="small">
@@ -77,7 +78,7 @@
         </div>
     </section>
 
-    <section id="components" class="bg-light">
+    <!--section id="components" class="bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -122,9 +123,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section-->
 
-    <section id="features">
+    <!--section id="features">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
@@ -159,13 +160,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section-->
 
-    <section id="features2" class="bg-light">
+    <section id="features" class="bg-light">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-12">
-                    <h2><span class="text-success">Special icons </span>for your app</h2>
+                    <h2>Esmaklassilised <span class="text-success">teenused</span></h2>
                     <p>Lorem Ipsum available, but the majority have suffered alteration euismod. </p>
                 </div>
             </div>
@@ -217,7 +218,7 @@
         </div>
     </section>
 
-    <section id="team">
+    <!--section id="team">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-3">
@@ -282,151 +283,89 @@
             </div>
 
         </div>
-    </section>
+    </section-->
 
 
-    <section id="pricing" class="bg-light">
+    <section id="pricing">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-12">
-                    <h2><span class="text-success">Best pricing </span>for your app</h2>
-                    <p>Lorem Ipsum available, but the majority have suffered alteration euismod. </p>
+                    <h2><span class="text-success">Ennustusmängust</span> osavõtt</h2>
+                    <p>Ennustusmängust osavõtmiseks pead end esmalt registreerima ja leheküljele sisse logima. Kui need sammud tehtud, siis suunatakse sind edasi vormile, kus on võimalik kõik ennustused sisestada, mille alusel teiste registreeritud liikmete vahel auhindade peale võistelda.
+						Kõik ennustused tuleb sisestada hiljemalt X min enne Euro 2016 turniiri avamängu, vastasel korral ennustust arvesse ei võeta. </p>
                 </div>
             </div>
 
             <div class="row m-t-lg">
-                <div class="col-lg-3">
+                <div class="col-lg-6">
                     <ul class="pricing-plan list-unstyled">
                         <li class="pricing-title">
-                            Basic
+                            Tavakasutaja
                         </li>
                         <li class="pricing-desc">
-                            Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.
+                            Tavakasutaja bla..
                         </li>
                         <li class="pricing-price">
-                            <span>$16</span>
+                            <span>TASUTA!</span>
                         </li>
                         <li>
-                            Dashboards
+                            Loo personaalne ennustusvõistlus*
                         </li>
                         <li>
-                            Projects view
+                            Tulemuste uuendamine reaalajas
+                        </li>
+						<li>
+                            ... midagi veel ...
+                        </li>
+						<li>
+                            ... ja veel ...
+                        </li>
+						<li>
+                            <small>*Kuni 10 registreeritud liiget</small>
                         </li>
                         <li>
-                            Contacts
-                        </li>
-                        <li>
-                            Calendar
-                        </li>
-                        <li>
-                            AngularJs
-                        </li>
-                        <li>
-                            <a class="btn btn-primary btn-sm" href="#">Signup today</a>
+                            <a class="btn btn-primary btn-sm" href="{{pathFor route='login'}}">Registreeri</a>
                         </li>
                     </ul>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-6">
                     <ul class="pricing-plan list-unstyled selected">
                         <li class="pricing-title">
-                            Standard
+                            Preemium liige
                         </li>
                         <li class="pricing-desc">
-                            Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.
+                            ning osalemistasud MTÜ FC Twister pangakontole kanda 
+							Arve numbri leiab Kontaktide lehelt.
                         </li>
                         <li class="pricing-price">
-                            <span>$22</span>
+                            <span>€15</span>
+                        </li>
+						<li>
+                            Piiramatu arvuga 
                         </li>
                         <li>
-                            Dashboards
+                            Reklaamidest vaba
                         </li>
                         <li>
-                            Projects view
+                            Osalemine suures auhinnamängus
                         </li>
                         <li>
-                            Contacts
+                            Ligipääs statistikale
                         </li>
                         <li>
-                            Calendar
-                        </li>
-                        <li>
-                            AngularJs
+                            ... ja palju enamat
                         </li>
                         <li class="plan-action">
-                            <a class="btn btn-primary btn-sm" href="#">Signup today</a>
+                            <a class="btn btn-primary btn-sm" href="{{pathFor route='login'}}">Registreeri</a>
                         </li>
                     </ul>
-                </div>
-
-                <div class="col-lg-3">
-                    <ul class="pricing-plan list-unstyled">
-                        <li class="pricing-title">
-                            Premium
-                        </li>
-                        <li class="pricing-desc">
-                            Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.
-                        </li>
-                        <li class="pricing-price">
-                            <span>$160</span>
-                        </li>
-                        <li>
-                            Dashboards
-                        </li>
-                        <li>
-                            Projects view
-                        </li>
-                        <li>
-                            Contacts
-                        </li>
-                        <li>
-                            Calendar
-                        </li>
-                        <li>
-                            AngularJs
-                        </li>
-                        <li>
-                            <a class="btn btn-primary btn-sm" href="#">Signup today</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-3">
-                    <ul class="pricing-plan list-unstyled">
-                        <li class="pricing-title">
-                            Prestige
-                        </li>
-                        <li class="pricing-desc">
-                            Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.
-                        </li>
-                        <li class="pricing-price">
-                            <span>$260</span>
-                        </li>
-                        <li>
-                            Dashboards
-                        </li>
-                        <li>
-                            Projects view
-                        </li>
-                        <li>
-                            Contacts
-                        </li>
-                        <li>
-                            Calendar
-                        </li>
-                        <li>
-                            AngularJs
-                        </li>
-                        <li>
-                            <a class="btn btn-primary btn-sm" href="#">Signup today</a>
-                        </li>
-                    </ul>
-                </div>
+                </div>                
             </div>
 
         </div>
     </section>
-    <section id="clients">
+    <!--section id="clients">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-3">
@@ -470,27 +409,29 @@
 
 
         </div>
-    </section>
+    </section-->
     <section id="contact" class="bg-light">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-3">
-                    <h2><span class="text-success">Contact with us</span> anytime</h2>
+                    <h2>Ootame <span class="text-success">tagasisidet!</span></h2>
                     <p>
-                        Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes.
+                        Selleks, et oma süsteemi õiges suunas arendada ning edaspidi veel paremat teenust pakkuda, oleme väga huvitatud kasutajate tagasisidest.<br/> 
+						Kui arvad, et siin leheküljel on midagi uut ja huvitavat, siis kirjuta meile. Kui leiad, et midagi peaks paremini tegema, siis kirjuta meile. Kui tahad ise kampa lüüa, siis kirjuta meile... <br/>
+						Sinu arvamus on meile oluline!
                     </p>
                 </div>
             </div>
 
             <div class="row text-center m-t-lg">
-                <div class="col-md-4 col-md-offset-3">
+                <div class="col-md-4 col-md-offset-4">
 
                     <form class="form-horizontal" role="form" method="post" action="#">
                         <div class="form-group">
-                            <label for="name" class="col-sm-2 control-label">Name</label>
+                            <label for="name" class="col-sm-2 control-label">Nimi</label>
 
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Your full name" value="">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Sisesta oma nimi" value="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -501,31 +442,32 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="message" class="col-sm-2 control-label">Message</label>
+                            <label for="message" class="col-sm-2 control-label">Teade</label>
 
                             <div class="col-sm-10">
-                                <textarea class="form-control" rows="3" name="message"  placeholder="Your message here..."></textarea>
+                                <textarea class="form-control" rows="3" name="message"  placeholder="Sinu sõnum siia..."></textarea>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <input id="submit" name="submit" type="submit" value="Send us a message" class="btn btn-success">
+                                <input id="submit" name="submit" type="submit" value="Saada sõnum" class="btn btn-success">
                             </div>
                         </div>
                     </form>
 
                 </div>
-                <div class="col-md-3 text-left">
+                <!--div class="col-md-3 text-left">
                     <address>
-                        <strong><span class="navy">Company name, Inc.</span></strong><br/>
-                        601 Street name, 123<br/>
-                        New York, De 34101<br/>
-                        <abbr title="Phone">P:</abbr> (123) 678-8674
+                        <strong><span class="navy"></span></strong><br/>
+                        Ettevõte OÜ<br/>
+						Tänav 123<br/>
+                        Tallinn 12345<br/>
+                        <abbr title="Phone">Tel:</abbr> (+372) 512 34 567
                     </address>
                     <p class="text-color">
-                        Consectetur adipisicing elit. Aut eaque, totam corporis laboriosam veritatis quis ad perspiciatis, totam corporis laboriosam veritatis, consectetur adipisicing elit quos non quis ad perspiciatis, totam corporis ea,
+                        Mingi tekst siia..
                     </p>
-                </div>
+                </div-->
             </div>
 
 
