Implemented Calendar functionality and added scripts to initiate DB with Fixtures and Teams data.

--- a/client/templates/common/page-header.html
+++ b/client/templates/common/page-header.html
@@ -18,12 +18,12 @@
                             <span>{{category}}</span>
                         </li>
                         <li class="active">
-                            <span>{{title}}</span>
+                            <span>{{_ "calendar"}}</span>
                         </li>
                     </ol>
                 </div>
                 <h2 class="font-light m-b-xs">
-                    {{title}}
+                    {{_ "calendar"}}
                 </h2>
                 <small>{{desc}}</small>
             </div>
