Multi-Language support
Register + emailRecovery

--- a/client/templates/views/commonviews/passwordRecovery.html
+++ b/client/templates/views/commonviews/passwordRecovery.html
@@ -8,22 +8,22 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="text-center m-b-md">
-                    <h3>PASSWORD RECOVER</h3>
-                    <small>Please fill the form to recover your password</small>
+                    <h3>{{_ "PASSWORD RECOVER"}}</h3>
+                    <small>{{_ "fill_form_password"}}</small>
                 </div>
                 <div class="hpanel">
                     <div class="panel-body">
                         <p>
-                            Enter your email address and your password will be reset and emailed to you.
+                            {{_ "recovery_email"}}
                         </p>
                         <form action="#" id="loginForm">
                             <div class="form-group">
-                                <label class="control-label" for="username">Email</label>
-                                <input type="text" placeholder="example@gmail.com" title="Please enter you email adress" required="" value="" name="username" id="username" class="form-control">
-                                <span class="help-block small">Your registered email address</span>
+                                <label class="control-label" for="username">{{_ "Email"}}</label>
+                                <input type="text" placeholder={{_ "login_email"}} title={{_"recovery_email_short"}} required="" value="" name={{_ "recovery_username_name"}} id="username" class="form-control">
+                                <span class="help-block small">{{_ "recovery_email_registered"}}</span>
                             </div>
 
-                            <button class="btn btn-success btn-block">Reset password</button>
+                            <button class="btn btn-success btn-block">{{_ "pw_reset"}}</button>
                         </form>
                     </div>
                 </div>
