Facebook login support

--- a/client/templates/common/header.html
+++ b/client/templates/common/header.html
@@ -152,7 +152,7 @@
                         </a>
                     </li>
                     <li class="dropdown">
-                        <a href="{{pathFor route='landingPage'}}">
+                        <a href="{{pathFor route='logout'}}">
                             <i class="pe-7s-upload pe-rotate-90"></i>
                         </a>
                     </li>
