--- a/client/templates/views/commonviews/login.html
+++ b/client/templates/views/commonviews/login.html
@@ -36,6 +36,11 @@
                 </div>
             </div>
         </div>
+		<div class="row">
+            <div class="col-md-12 text-center">
+                <button id="fb-login" class="btn btn-facebook"><i class="fa fa-facebook"></i> | {{_ "login"}}</button>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-12 text-center">
                 {{_ "copyright"}}
