--- a/client/templates/views/commonviews/errorTwo.html
+++ b/client/templates/views/commonviews/errorTwo.html
@@ -1,17 +1,17 @@
 <template name="errorTwo">
 
     <div class="back-link">
-        <a href="{{pathFor route='dashboard'}}" class="btn btn-primary">Back to Dashboard</a>
+        <a href="{{pathFor route='dashboard'}}" class="btn btn-primary">{{_ "error_back_home"}}</a>
     </div>
 
     <div class="error-container">
         <i class="pe-7s-way text-success big-icon"></i>
-        <h1>500</h1>
-        <strong>Internal Server Error</strong>
+        <h1>{{_ "error_500"}}</h1>
+        <strong>{{_ "error_ise"}}</strong>
         <p>
-            The server encountered something unexpected that didn't allow it to complete the request. We apologize.
+            {{_ "error_ise_info"}}
         </p>
-        <a href="{{pathFor route='dashboard'}}" class="btn btn-xs btn-success">Go back to dashboard</a>
+        <a href="{{pathFor route='dashboard'}}" class="btn btn-xs btn-success">{{_ "error_back_home_bot"}}</a>
     </div>
 
 </template>
