--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -35,7 +35,7 @@
 
 			<ul class="nav" id="side-menu">
                 <li class="{{isActiveRoute regex='profile'}}"><a href="{{pathFor route='profile'}}">Profiil</a></li>
-				<li class="{{isActiveRoute regex='blog'}}"><a href="{{pathFor route='blog'}}">Blogi</a></li>
+				<li class="{{isActiveRoute regex='leagues'}}"><a href="{{pathFor route='leagues'}}">Liigad</a></li>
 				<li class="{{isActiveRoute regex='calendar'}}"><a href="{{pathFor route='calendar'}}">Kalender</a></li>
 				<li class="{{isActiveRoute regex='chatView'}}"><a href="{{pathFor route='chatView'}}">Vestlused</a></li>
 				<li class="{{isActiveRoute regex='appPlans'}}"><a href="{{pathFor route='appPlans'}}">Hinnakiri</a></li>
